--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=live_tv" />
 
     <meta charset="utf-8">
-    <title>TV Maze Starter Code</title>
+    <title>Tv-maze</title>
     
     <!-- include an external style sheet -->
     <link rel="stylesheet" href="style.css">  
