--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <link rel="manifest" href="manifest.json">
 
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=live_tv" />
 
