--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <title>Tv-maze</title>
     
     <!-- include an external style sheet -->
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="styles.css">  
     
     <!-- include an external JavaScript file -->
-    <script src="apiexample.js"></script>
+    <script src="mainscript.js"></script>
   </head>
   
   <body>
