--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
     
-  
+  <button id="installButton" style='display: none;'>Insall App</button>
   </body>
   
 </html>
