--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </div>
     
-  <button id="installButton" style='display: none;'>Insall App</button>
+  <button id="installButton">Insall App</button>
   </body>
   
 </html>
