--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+<link rel="icon" type="image/x-icon" href="icon/icon512_maskable.png">
+
 <link rel="manifest" href="manifest.json">
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
