--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <link rel="manifest" href="manifest.json">
 
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <meta name="description" content="This website fetches from the Tv-Maze Api, to return shows or movies from all streaming service or aired channels and then displays episodes, a quick summary, image cover and episode description, imaeg and content ">
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=live_tv" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=live_tv">
 
     <meta charset="utf-8">
     <title>Tv-maze</title>
