--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </span>
      </h1>
 
+    <h1 id="status"></h1>
     
       
      <input type="text" id="search" placeholder="The greatest beer run ever">
