--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
 <link rel="manifest" href="manifest.json">
 
+<link rel="preload" as="image" href="brandsimg/Prime.webp">
+
+<link rel="preload" as="image" href="brandsimg/Paramount-Logo.webp">
+
+<link rel="preload" as="image" href="brandsimg/Netflix.webp">
+
+<link rel="preload" as="image" href="brandsimg/images.webp">
+
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <meta name="description" content="This website fetches from the Tv-Maze Api, to return shows or movies from all streaming service or aired channels and then displays episodes, a quick summary, image cover and episode description, imaeg and content ">
